--- a/covid-page.html
+++ b/covid-page.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--This page intention is to inform people the impact Covid-19 had on hunger -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -28,7 +29,10 @@
 </head>
 
 <body>
+<!--This div is necessary to add padding to the rest of the half of the page on all of it sides.-->
 <div class="padding">
+    <!--created two different paragraphs to emphasize different intentions. The first paragrah is for the right side of
+    the page-->
     <p>
     <div class="p1">
         <ul>
@@ -38,10 +42,12 @@
             </li>
         </ul>
     </div>
+    <!--This image was put in a seperate div as we wanted to not see this image with in the right text box.-->
     <div class="hungryGirl">
         <img src="imgs/hungryGirl.png" alt="Guilting People Into Donating" style="width:38em; height:auto; padding:5%">
     </div>
     </p>
+    <!--created this paragraph to isolate the second half of the page which is the left side.-->
     <p>
     <div class="p2">
         <li>
@@ -49,21 +55,26 @@
             worked for minimum wage.
         </li>
         <br/>
+        <!--This paragraph here is taken from the cdc website with their information based on survey taken.-->
         <li>
             Data from several sources show a dramatic increase in the number of households struggling to put enough food
-            on the table. Some 24 million adults — 11 percent of all adults in the country — reported that their household
-            sometimes or often didn’t have enough to eat in the last seven days, according to Household Pulse Survey
-            data collected January 20 – February 1. This was far above the pre-pandemic rate: a recent survey released by the
-            Agriculture Department found that 3.4 percent of adults reported that their household had “not enough to eat” at some point over
-            the full 12 months of 2019. When asked why, 80 percent said they “couldn’t afford to buy more food,” rather than (or in
-            addition to) non-financial factors such as lack of transportation or safety concerns due to the pandemic.
+            on the table. Some 24 million adults — 11 percent of all adults in the country — reported that their
+            household sometimes or often didn’t have enough to eat in the last seven days, according to Household Pulse
+            Survey data collected January 20 – February 1. This was far above the pre-pandemic rate: a recent survey
+            released by the Agriculture Department found that 3.4 percent of adults reported that their household had
+            “not enough to eat” at some point over the full 12 months of 2019. When asked why, 80 percent said they
+            “couldn’t afford to buy more food,” rather than (or in addition to) non-financial factors such as lack of
+            transportation or safety concerns due to the pandemic.
         </li>
+
         <br/>
-        <img src="imgs/dataAboutHunger.png" alt="Survey Results based for hunger" style=" width: 100%; padding-bottom:1%;">
+    <!--I have added this image within the div as I wanted it to be part of the text above-->
+    <img src="imgs/dataAboutHunger.png" alt="Survey Results based for hunger"
+             style=" width: 100%; padding-bottom:1%;">
     </div>
     </p>
 </div>
-
+<!--this is the footer of the page with the copyright sign and the year of creation of this page.-->
 <div class="footer">
     <p><span>&#169;</span>2021</p>
 
